tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:57:21: error: expected ‘)’ before ‘in’
   57 |   printf("%d\n", "a" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:57:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   57 |   printf("%d\n", "a" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:58:21: error: expected ‘)’ before ‘in’
   58 |   printf("%d\n", "b" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:58:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   58 |   printf("%d\n", "b" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:59:23: error: expected ‘)’ before ‘in’
   59 |   printf("%d\n", "ell" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:59:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   59 |   printf("%d\n", "ell" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:60:23: error: expected ‘)’ before ‘in’
   60 |   printf("%d\n", "foo" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:60:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   60 |   printf("%d\n", "foo" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
